# Hands-On-Game-Animation-Programming

./: CMakeLists.txt
Chapter01/Sample00/: CMakeLists.txt
Chapter02/Sample00/: CMakeLists.txt
Chapter03/Sample00/: CMakeLists.txt
Chapter03/Sample01/: CMakeLists.txt
Chapter04/Sample00/: CMakeLists.txt
Chapter04/Sample00/Code/: main.cpp
Chapter05/Sample00/: CMakeLists.txt
Chapter06/Sample00/: CMakeLists.txt
Chapter06/Sample00/Code/: Shader.cpp
Chapter06/Sample01/: CMakeLists.txt
Chapter06/Sample01/Code/: Attribute.cpp  Sample.cpp  Shader.cpp  Uniform.cpp
Chapter07/Sample00/: CMakeLists.txt
Chapter07/Sample00/Code/: GLTFLoader.cpp
Chapter08/Sample00/: CMakeLists.txt
Chapter08/Sample00/Code/: Attribute.cpp  GLTFLoader.cpp  Track.cpp
Chapter08/Sample01/: CMakeLists.txt
Chapter08/Sample01/Code/: GLTFLoader.cpp  Track.cpp
Chapter09/Sample00/: CMakeLists.txt
Chapter09/Sample00/Code/: Clip.cpp  GLTFLoader.cpp  Pose.cpp
Chapter09/Sample01/: CMakeLists.txt
Chapter09/Sample01/Code/: Pose.cpp
Chapter10/Sample00/: CMakeLists.txt
Chapter10/Sample00/Code/: Clip.cpp  Uniform.cpp  main.cpp
Chapter10/Sample01/: CMakeLists.txt
Chapter10/Sample01/Code/: main.cpp
Chapter10/Sample02/: CMakeLists.txt
Chapter10/Sample02/Code/: Shader.cpp  Track.cpp
Chapter11/Sample00/: CMakeLists.txt
Chapter11/Sample00/Code/: Uniform.cpp
Chapter11/Sample01/: CMakeLists.txt
Chapter11/Sample01/Code/: Clip.cpp  Track.cpp
Chapter11/Sample02/: CMakeLists.txt
Chapter11/Sample02/Code/: Shader.cpp
Chapter11/Sample03/: CMakeLists.txt
Chapter11/Sample03/Code/: Clip.cpp  Track.cpp
Chapter12/Sample00/: CMakeLists.txt
Chapter12/Sample00/Code/: Attribute.cpp  Track.cpp
Chapter12/Sample01/: CMakeLists.txt
Chapter12/Sample01/Code/: Pose.cpp  Uniform.cpp
Chapter12/Sample02/: CMakeLists.txt
Chapter12/Sample02/Code/: Pose.cpp  Track.cpp
Chapter12/Sample03/: CMakeLists.txt
Chapter13/Sample00/: CMakeLists.txt
Chapter13/Sample00/Code/: Clip.cpp  Pose.cpp
Chapter13/Sample01/: CMakeLists.txt
Chapter13/Sample01/Code/: Attribute.cpp  Clip.cpp  Sample.cpp
Chapter13/Sample02/: CMakeLists.txt
Chapter13/Sample02/Code/: Attribute.cpp  Sample.cpp
Chapter13/Sample03/: CMakeLists.txt
Chapter13/Sample03/Code/: Attribute.cpp  Sample.cpp
Chapter14/Sample00/: CMakeLists.txt
Chapter14/Sample00/Code/: GLTFLoader.cpp  Pose.cpp  Track.cpp
Chapter14/Sample01/: CMakeLists.txt
Chapter14/Sample01/Code/: Pose.cpp  TransformTrack.cpp  Uniform.cpp
Chapter15/Sample00/: CMakeLists.txt
Chapter15/Sample00/Code/: AnimTexture.cpp  Crowd.cpp  Uniform.cpp
Chapter15/Sample01/: CMakeLists.txt
Chapter15/Sample01/Code/: Crowd.cpp  Sample.cpp  TransformTrack.cpp
